# nameless

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  vcpkg.json
src/: app.cpp  app.h  base_render_system.cpp  base_render_system.h  main.cpp  movement_controller.cpp  movement_controller.h  nameless_camera.cpp  nameless_camera.h  nameless_frame_info.h  nameless_game_object.cpp  nameless_game_object.h  nameless_renderer.cpp  nameless_renderer.h  nameless_utils.h
src/shaders/: compile.bat  point_light.frag  point_light.vert  simple_shader.frag  simple_shader.vert
src/systems/: base_render_system.h  point_light_system.cpp  point_light_system.h
src/vulkanSetup/: nameless_buffer.cpp  nameless_buffer.h  nameless_descriptors.cpp  nameless_descriptors.h  nameless_device.cpp  nameless_device.h  nameless_model.cpp  nameless_model.h  nameless_pipeline.cpp  nameless_pipeline.h  nameless_swapchain.cpp  nameless_swapchain.h  nameless_texture.cpp  nameless_texture.h  nameless_window.cpp  nameless_window.h
